2002-06-19  Mo DeJong  <supermo@bayarea.net>

	* gui/tclgrepdriver.tcl (processNextIndex, line_grep):
	Don't use Tcl IO subststem to filter crlf into lf,
	instead handle crlf sequences directly in line_grep.
	* tests/gui/line_grep.test:
	* tests/gui/tclgrepdriver.test: Add test cases for crlf
	EOL style.

2002-06-09  Mo DeJong  <supermo@bayarea.net>

	* gui/editorpane.tcl (print_file, print_dialog): Escape []
	in user input to avoid an error where sn_print_file
	tries to execute the window title as a command. Don't
	regsub the input first since that does not protect
	from bad user input.
	* gui/printdialog.tcl (printit): Escape [] in user input
	to avoid an error where sn_print_file tries to execute
	the window title as a command.
	* gui/tree.tcl (print_it): Ditto.

2002-06-09  Mo DeJong  <supermo@bayarea.net>

	* gui/editorpane.tcl (EditorBindings): Take puts call
	out of Insert binding. Remove <Double-1><ButtonRelease-1>
	binding. This binding did not function in version 5.0
	and it was highlighting in an unexpected way under 5.1.

2002-06-08  Mo DeJong  <supermo@bayarea.net>

	* gui/preferences.tcl (AddInclude): Reorder bindings
	on "Include Directories" text widget so that hitting
	Return in the text widget no longer dismisses the
	project prefs dialog.

2002-06-08  Mo DeJong  <supermo@bayarea.net>

	* etc/english.txt.in: Remove unused Email, Web,
	BugReport, LimitScanMsg, LimMsg, ReportBugs,
	EditionCannotOpenThisProject, SplashSupportText,
	ButtonBugReport, and ButtonMail strings. Removed
	mention of old support email from the string
	NewerProjectCannotBeOpened.
	* etc/german.txt: Ditto.
	* etc/japanese.txt: Ditto.
	* gui/bugreport.tcl (mail_send_bug_report,
	web_send_bug_report, mail_bug_report, sn_drop_mail_line,
	sn_send_mail): Remove all old email and web based
	bug reporting code.
	* gui/misc.tcl: Remove commented out use of the string
	SplashSupportText.
	* gui/preferences.tcl (AddOthers, handle_mailhost):
	Disconnect the mailhost entry box from the